src/test/ui/impl-trait/issue-55608-captures-empty-region.stderr
error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/issue-55608-captures-empty-region.rs:6:16
   |
LL | fn server() -> impl FilterBase2 {
   |                ^^^^^^^^^^^^^^^^
   |
   = note: hidden type `Map2<[closure@$DIR/issue-55608-captures-empty-region.rs:7:36: 7:41]>` captures an empty lifetime

error: aborting due to previous error

For more information about this error, try `rustc --explain E0700`.
